-Correct wrong Random-Task (Same wrong thought as in linux prior to 3.17) -Base64: Converter used which is also available prior to Java8